# rgb-controller

./: .gitignore  README.md  RGBController.py  make.ps1  requirements.txt
rgbsyncserver/: README.txt  server.cpp
rgbsyncserver/APIs/RAZER/: CMakeLists.txt  README.txt  razerAPIclient.cpp
rgbsyncserver/APIs/iCUESDK/: README.txt  corsairAPIclient.cpp
startup/: STARTUP.md  run_RGB.bat  run_RGB_once.bat  set_RGB_flag_startup.bat
